--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ant-collapse-header-text {
+  color: #e5c985 !important;
+}
+
+.ant-collapse-arrow > svg {
+  color: #e5c985 !important;
+}
+
+:where(.css-dev-only-do-not-override-161f05s).ant-collapse
+  > .ant-collapse-item {
+  border-bottom: 2px solid #393939;
+}
+
+:where(.css-dev-only-do-not-override-161f05s).ant-collapse {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.88);
+  font-size: 14px;
+  line-height: 1.5714285714285714;
+  list-style: none;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  background-color: transparent;
+  border: 2px solid #393939;
+  border-radius: 8px;
+}
+
+:where(.css-dev-only-do-not-override-161f05s).ant-collapse
+  .ant-collapse-content {
+  color: rgba(255, 255, 255, 0.7);
+  background-color: transparent;
+  border-top: 2px solid #393939;
+}
+
+.btn-style {
+  background-color: #0a0a0a !important;
+  color: #e5c985 !important;
+  border: 1px solid #544931;
+}
